Fix header spacing and breacrumbs linking

--- a/src/global/product/Breadcrumbs/breadcrumbs.css
+++ b/src/global/product/Breadcrumbs/breadcrumbs.css
@@ -27,7 +27,9 @@
 }
 @media only screen and (max-width: 768px) {
     .breadcrumbs__list ul {
-        display: block !important;
+        display: flex !important;
+        flex-wrap: wrap;
+        gap: 18px;
     }
     .breadcrumbs__list ul li {
         padding-bottom: 12px;
